--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,9 +32,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Push to Staging
-      run: |
-          git checkout staging  # Switch to the staging branch
-          git merge dev --no-ff --no-commit  # Merge changes from dev into staging
-          git commit -m "Merge dev into staging"  # Commit the merge
-          git push origin staging  # Push changes to the staging branch
+    - name: Push
+      uses: s0/git-publish-subdir-action@develop
+      env:
+          REPO: self
+          BRANCH: build # The branch name where you want to push the assets
+          FOLDER: build # The directory where your assets are generated
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
