dev branch added

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Build, Test, and Push to Staging
 
 on:
   push:
-    branches: [ "main" , "dev" ]
+    branches: ["dev" ]
 
 permissions:
   contents: read
