--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,11 +32,14 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Push
-      uses: s0/git-publish-subdir-action@develop
-      env:
-          REPO: self
-          BRANCH: staging # The branch name where you want to push the assets
-          FOLDER: git_js # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Deploy to prod
+        run: |
+          git push -u origin staging
