--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,4 +42,11 @@ jobs:
 
       - name: Deploy to prod
         run: |
-          git push -u origin staging
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
+          git fetch --unshallow
+          git checkout Staging
+          git pull
+          git merge --no-ff master -m "Auto-merge master back to dev"
+          git push
+          
