--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,16 +37,21 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    # Deploy to local repo
+    - name: Deploy
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: staging
+        FOLDER: build
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Deploy to prod
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "Github Actions"
-          git fetch --unshallow
-          git checkout Staging
-          git pull
-          git merge --no-ff master -m "Auto-merge master back to dev"
-          git push
-          
+    # Deploy to another repo
+    - name: Deploy
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: git@github.com:owner/repo.git
+        BRANCH: staging
+        FOLDER: build
+        SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_PRIVATE_KEY }}
+        KNOWN_HOSTS_FILE: resources/known_hosts # Needed if target repo is not on github.com
